k3sdeploys/plex/transmission/deploymentopenvpn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: plex
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: haugene/transmission-openvpn:latest
        ports:
          - containerPort: 9091
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        volumeMounts:
        - name: transmission-config
          mountPath: /config
        - name: transmission-nfs
          mountPath: /downloads
          subPath: transmission/downloads
        - name: transmission-nfs
          mountPath: /watch
          subPath: transmission/watch
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN

      # - name: busybox
      #   image: busybox
      #   command:
      #     - sleep
      #     - "3600"
      #   resources:

      volumes:
      - name: transmission-config
        persistentVolumeClaim:
          claimName: transmission-config
      - name: transmission-nfs
        persistentVolumeClaim:
          claimName: transmission-nfs-pvc
