k3sdeploys/plex/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: transmission.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 9091
